[@OMNI-DOOR/GULP-PLUGIN-VUE-SFC]: 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omni-door/gulp-plugin-vue-sfc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -21,7 +21,12 @@
     "build:demo": "dumi build",
     "release": "omni release"
   },
-  "keywords": ["gulpfriendly", "gulp-plugin-vue-sfc", "gulp-plugin", "vue-sfc"],
+  "keywords": [
+    "gulpfriendly",
+    "gulp-plugin-vue-sfc",
+    "gulp-plugin",
+    "vue-sfc"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -37,7 +42,6 @@
     "@rollup/plugin-json": "~4.1.0",
     "@rollup/plugin-node-resolve": "~11.0.0",
     "@types/chai": "4.2.9",
-    "@types/gulp-util": "^3.0.35",
     "@types/mocha": "7.0.1",
     "@types/node": "~14.0.27",
     "@types/through2": "^2.0.36",
@@ -73,7 +77,7 @@
     "webpack": "~4.46.0"
   },
   "dependencies": {
-    "gulp-util": "~3.0.8",
+    "plugin-error": "~1.0.1",
     "through2": "~4.0.2",
     "vue-template-compiler": "~2.6.14"
   }
