--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omni-door/gulp-plugin-vue-sfc",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -77,8 +77,10 @@
     "webpack": "~4.46.0"
   },
   "dependencies": {
+    "@vue/component-compiler": "~4.2.4",
     "plugin-error": "~1.0.1",
     "through2": "~4.0.2",
+    "vinyl-sourcemaps-apply": "~0.2.1",
     "vue-template-compiler": "~2.6.14"
   }
 }
